Index,City and Compare page

--- a/compare.html
+++ b/compare.html
@@ -41,7 +41,6 @@
                </div>
              </div>
         </nav>
-
         <!-- Registration Modal -->
         <div id="signup" class="modal fade" role="dialog">
             <div class="modal-dialog">
@@ -75,15 +74,14 @@
                 </div>
             </div>
         </div>
-
         <!-- Page Title -->
-        <div class="row ninety">
-            <div class="col-sm-12" style="font-size: 42pt; font-weight: bold; text-align: center">COMPARE CITIES</div>
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12" style="font-size: 42pt; font-weight: bold; text-align: center"><h1>COMPARE CITIES</h1></div>
         </div>
         <hr />
         <!-- Dropdowns -->
-        <div class="row ninety">
-            <div class="col-sm-6">
+        <div class="row">
+            <div class=" col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
                 <div id="dropdown1" class="dropdown center-block" style="width: 200px; align-self: center;">
                     <button class="btn btn-default dropdown-toggle" style="width: 100%" type="button" data-toggle="dropdown">Select a city...
                     <span class="caret" style="margin-left: 10px;"></span></button>
@@ -101,7 +99,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
                 <div id="dropdown2" class="dropdown center-block" style="width: 200px; align-self: center;">
                     <button class="btn btn-default dropdown-toggle" style="width: 100%" type="button" data-toggle="dropdown">Select a city...
                     <span class="caret" style="margin-left: 10px;"></span></button>
@@ -124,102 +122,90 @@
         <!-- Content -->
         <div class="container-fluid">
             <!-- Header -->
-            <div class="row ninety">
-            	<div class="col-sm-6">
-            		<div id="header-text1"></div>
+            <div class="row">
+            	<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+            		<h4 id="header-text1" class="city1">City1</h4>
             	</div>
-            	<div class="col-sm-6">
-            		<div id="header-text2" class="city2"></div>
+            	<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+            		<h4 id="header-text2" class="city2">City2</h4>
             	</div>
             </div>
             <hr />
             <!-- Top Information -->
-            <div class="row ninety">
+            <div class="row">
                 <!-- City 1 -->
-                <div class="col-sm-6">
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
                     <div class="col-sm-4">
                         <div class="small-info city1">
                             <span><span class="glyphicon glyphicon-flag"></span>Country</span>
-                            <h2 id="top-info-country1" class="margin10 top-info"></h2>
+                            <h2 id="city1-country" class="margin10 top-info"></h2>
                         </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="small-info city1">
                             <span><span class="glyphicon glyphicon-paperclip"></span>Top Language</span>
-                            <h2 id="top-info-lang1" class="margin10 top-info"></h2>
+                            <h2 id="city1-lang" class="margin10 top-info"></h2>
                         </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="small-info city1">
                             <span><span class="glyphicon glyphicon-user"></span>Population</span>
-                            <h2 id="top-info-pop1" class="margin10 top-info"></h2>
+                            <h2 id="city1-pop" class="margin10 top-info"></h2>
                         </div>
                     </div>
                 </div>
                 <!-- City 2 -->
-                <div class="col-sm-6">
-                    <div class="col-sm-4">
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                         <div class="small-info city2">
                             <span><span class="glyphicon glyphicon-flag"></span>Country</span>
-                            <h2 id="top-info-country2" class="margin10 top-info"></h2>
+                            <h2 id="city2-country" class="margin10 top-info"></h2>
                         </div>
                     </div>
-                    <div class="col-sm-4">
+                     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                         <div class="small-info city2">
                             <span><span class="glyphicon glyphicon-paperclip"></span>Top Language</span>
-                            <h2 id="top-info-lang2" class="margin10 top-info"></h2>
+                            <h2 id="city2-lang" class="margin10 top-info"></h2>
                         </div>
                     </div>
-                    <div class="col-sm-4">
+                     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                         <div class="small-info city2">
                             <span><span class="glyphicon glyphicon-user"></span>Population</span>
-                            <h2 id="top-info-pop2" class="margin10 top-info"></h2>
+                            <h2 id="city2-pop" class="margin10 top-info"></h2>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row ninety">
+            <div class="row">
                 <!-- City 1 -->
-                <div class="col-sm-6">
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
                     <div class="col-sm-4">
                         <div class="small-info city1">
                             <span><span class="glyphicon glyphicon-map-marker"></span>Area</span>
-                            <h2 id="top-info-area1" class="margin10 top-info"></h2>
+                            <h2 id="city1-area" class="margin10 top-info"></h2>
                         </div>
                     </div>
-                    <div class="col-sm-4">
-                        <div class="small-info city1">
-                            <span><span class="glyphicon glyphicon-globe"></span>Website</span>
-                            <h2 id="top-info-web1" class="margin10 top-info"></h2>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="small-info city1">
-                            <span><span class="glyphicon glyphicon-tower"></span>Mayor</span>
-                            <h2 id="top-info-mayor1" class="margin10 top-info"></h2>
-                        </div>
-                    </div>
+                    <div class="col-sm-2">
+						<div class="small-info city1">
+							<span><span class="glyphicon glyphicon-globe"></span>GDP</span>
+							<h2 id="city1-gdp" class="margin10 top-info"></h2>
+						</div>
+					</div>
                 </div>
-                <!-- City 2 -->
-                <div class="col-sm-6">
+			    <!-- City 2 -->
+               <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
                     <div class="col-sm-4">
                         <div class="small-info city2">
                             <span><span class="glyphicon glyphicon-map-marker"></span>Area</span>
-                            <h2 id="top-info-area2" class="margin10 top-info"></h2>
+                            <h2 id="city2-area" class="margin10 top-info"></h2>
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="small-info city2">
-                            <span><span class="glyphicon glyphicon-globe"></span>Website</span>
-                            <h2 id="top-info-web2" class="margin10 top-info"></h2>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="small-info city2">
-                            <span><span class="glyphicon glyphicon-tower"></span>Mayor</span>
-                            <h2 id="top-info-mayor2" class="margin10 top-info"></h2>
-                        </div>
-                    </div>
+						<div class="small-info city2">
+							<span><span class="glyphicon glyphicon-globe"></span>GDP</span>
+							<h2 id="city2-gdp" class="margin10 top-info"></h2>
+						</div>
+					</div>
                 </div>
             </div>
             <hr />
