--- a/index.html
+++ b/index.html
@@ -57,62 +57,46 @@
     <main id="mainId">
 		<div class="container-fluid" id="mainContainer">
 			<div class="row">
-				<div class="col-lg-8 col-md-8">
+				<div class="col-xs-12 col-lg-8 col-md-8 col-sm-12">
 					<div class="container">
 						<div class="row"> 
-							<div class="col-lg-12 col-md-12" id="cityImageBox">
+							<div class="col-sm-12 col-lg-12 col-md-12" id="cityImageBox">
 								<div class="carousel slide" data-ride="carousel">
 									<div class="carousel-inner" role="listbox">
-										<div class="item active displayItem">
-											<img src="images\torontoImage.jpg" class="displayImage">
-										</div>
-										<div class="item displayItem">
-											<img src="images\losAngelesImage.jpg" class="displayImage">
-										</div>
-										<div class="item displayItem">
-											<img src="images\newYorkImage.jpg" class="displayImage">
-										</div>
-										<div class="item displayItem">
-											<img src="images\shanghaiImage.jpg" class="displayImage">
-										</div>
-										<div class="item displayItem">
-											<img src="images\vancouverImage.jpg" class="displayImage">
-										</div>
-										<div class="item displayItem">
-											<img src="images\montrealImage.jpg" class="displayImage">
-										</div>
-										<div class="item displayItem">
-											<img src="images\bucharestImage.jpg" class="displayImage">
-										</div>
-										<div class="item displayItem">
-											<img src="images\londonImage.jpg" class="displayImage">
-										</div>
-										<div class="item displayItem">
-											<img src="images\tokyoImage.jpg" class="displayImage">
-										</div>
-										<div class="item displayItem">
-											<img src="images\parisImage.jpg" class="displayImage">
-										</div>
+										<div class="item active displayItem" id="torontoItem"></div>
+										<div class="item displayItem" id="losAngelesItem"></div>
+										<div class="item displayItem" id="newYorkItem"></div>
+										<div class="item displayItem" id="shanghaiItem"></div>
+										<div class="item displayItem" id="vancouverItem"></div>
+										<div class="item displayItem" id="montrealItem"></div>
+										<div class="item displayItem" id="bucharestItem"></div>
+										<div class="item displayItem" id="londonItem"></div>
+										<div class="item displayItem" id="tokyoItem"></div>
+										<div class="item displayItem" id="parisItem"></div>
 									</div>
 								</div>
 							</div>	
 						</div>
 						<div class="row">
-							<div class="col-lg-12 col-md-12">
-								<h2> asdfasd </h2>
+							<div class="col-sm-12 col-lg-12 col-md-12 col-xs-12">
+								<h2> What is CityScout </h2>
+								<p> Our website provide information about cities throughout the world. In hope help people learn about their city. 
+								As well as provide information and comparison between cities to help individuals decide if living in a new city is right for them. 
+								We provide information about language, food cost, entertainment, attractions, quality of life and much more about each city. 
+								Make sure you check out the comment other people of left about cites or provide your on input just make an account.</p>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4">
+				<div class="col-lg-4 col-md-4 col-sm-12">
 					<div class="container listContainer">
 						<div class="row">
-							<div class="col-lg-12 col-md-12">
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 								<button type="button" class="btn btn-primary btm-lg btn-block btn-huge" data-toggle="modal" data-target="#signup">Accesses more content </button>
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-lg-12 col-md-12">	
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">	
 								<h1> SELECT CITY </h1>
 								<ul>
 									<li class="city cityList" id="toronto" onClick="loadCity(this)">Toronto (Canada)</li>
