--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<div class="container listContainer">
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<button type="button" class="btn btn-primary btm-lg btn-block btn-huge" data-toggle="modal" data-target="#signup">Accesses more content </button>
+								<button type="button" class="btn btn-primary btm-lg btn-block btn-huge" data-toggle="modal" data-target="#signup">Sign Up for more features</button>
 							</div>
 						</div>
 						<div class="row">
