Index and city page worked on

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 		<!-- Navigation -->
-        <nav class="navbar navbar-inverse navbar-fixed-top">
+        <nav class="navbar navbar-inverse navbar-static-top">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -54,67 +54,65 @@
                </div>
              </div>
         </nav>
-    <main id="mainId">
-		<div class="container-fluid" id="mainContainer">
-			<div class="row">
-				<div class="col-xs-12 col-lg-8 col-md-8 col-sm-12">
-					<div class="container">
-						<div class="row"> 
-							<div class="col-sm-12 col-lg-12 col-md-12" id="cityImageBox">
-								<div class="carousel slide" data-ride="carousel">
-									<div class="carousel-inner" role="listbox">
-										<div class="item active displayItem" id="torontoItem"></div>
-										<div class="item displayItem" id="losAngelesItem"></div>
-										<div class="item displayItem" id="newYorkItem"></div>
-										<div class="item displayItem" id="shanghaiItem"></div>
-										<div class="item displayItem" id="vancouverItem"></div>
-										<div class="item displayItem" id="montrealItem"></div>
-										<div class="item displayItem" id="bucharestItem"></div>
-										<div class="item displayItem" id="londonItem"></div>
-										<div class="item displayItem" id="tokyoItem"></div>
-										<div class="item displayItem" id="parisItem"></div>
-									</div>
+    <main class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 col-lg-8 col-md-8 col-sm-12">
+				<!--<div class="container">-->
+					<div class="row"> 
+						<div class="col-sm-12 col-lg-12 col-md-12" id="cityImageBox">
+							<div class="carousel slide" data-ride="carousel">
+								<div class="carousel-inner" role="listbox">
+									<div class="item active displayItem" id="torontoItem"></div>
+									<div class="item displayItem" id="losAngelesItem"></div>
+									<div class="item displayItem" id="newYorkItem"></div>
+									<div class="item displayItem" id="shanghaiItem"></div>
+									<div class="item displayItem" id="vancouverItem"></div>
+									<div class="item displayItem" id="montrealItem"></div>
+									<div class="item displayItem" id="bucharestItem"></div>
+									<div class="item displayItem" id="londonItem"></div>
+									<div class="item displayItem" id="tokyoItem"></div>
+									<div class="item displayItem" id="parisItem"></div>
 								</div>
-							</div>	
-						</div>
-						<div class="row">
-							<div class="col-sm-12 col-lg-12 col-md-12 col-xs-12">
-								<h2> What is CityScout </h2>
-								<p> Our website provide information about cities throughout the world. In hope help people learn about their city. 
-								As well as provide information and comparison between cities to help individuals decide if living in a new city is right for them. 
-								We provide information about language, food cost, entertainment, attractions, quality of life and much more about each city. 
-								Make sure you check out the comment other people of left about cites or provide your on input just make an account.</p>
 							</div>
+						</div>	
+					</div>
+					<div class="row">
+						<div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 panel">
+							<h2> What is CityScout </h2>
+							<p> Our website provide information about cities throughout the world. In hope help people learn about their city. 
+							As well as provide information and comparison between cities to help individuals decide if living in a new city is right for them. 
+							We provide information about language, food cost, entertainment, attractions, quality of life and much more about each city. 
+							Make sure you check out the comment other people of left about cites or provide your own input just make an account.</p>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-12">
-					<div class="container listContainer">
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<button type="button" class="btn btn-primary btm-lg btn-block btn-huge" data-toggle="modal" data-target="#signup">Sign Up for more features</button>
-							</div>
+				<!--</div>-->
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-12">
+				<div class="container" id="listcontainer">
+					<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<button type="button" class="btn btn-primary btm-lg btn-block btn-huge" data-toggle="modal" data-target="#signup">Sign Up for more features</button>
 						</div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">	
-								<h1> SELECT CITY </h1>
-								<ul>
-									<li class="city cityList" id="toronto" onClick="loadCity(this)">Toronto (Canada)</li>
-									<li class="city cityList" id="vancouver" onClick="loadCity(this)">Vancouver (Canada)</li>
-									<li class="city cityList" id="montreal" onClick="loadCity(this)">Montreal (Canada)</li>
-									<li class="city cityList" id="newYork" onClick="loadCity(this)">New York(USA)</li>
-									<li class="city cityList" id="losAngeles" onClick="loadCity(this)">Los Angeles(USA)</li>
-									<li class="city cityList" id="london" onClick="loadCity(this)">London (England)</li>
-									<li class="city cityList" id="paris" onClick="loadCity(this)">Paris (France)</li>
-									<li class="city cityList" id="shanghai" onClick="loadCity(this)">Shanghai(China)</li>
-									<li class="city cityList" id="tokyo" onClick="loadCity(this)">Tokyo(Japan)</li>
-									<li class="city cityList" id="bucharest" onClick="loadCity(this)">Bucharest(Romania)</li>
-								</ul>
-								<h4>More cities will be added soon</h4>
-							</div>	
-						</div>
-					</div>	
-				</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 center">	
+							<h1> SELECT CITY </h1>
+							<ul>
+								<li class="city cityList" id="toronto" onClick="loadCity(this)">Toronto (Canada)</li>
+								<li class="city cityList" id="vancouver" onClick="loadCity(this)">Vancouver (Canada)</li>
+								<li class="city cityList" id="montreal" onClick="loadCity(this)">Montreal (Canada)</li>
+								<li class="city cityList" id="newYork" onClick="loadCity(this)">New York(USA)</li>
+								<li class="city cityList" id="losAngeles" onClick="loadCity(this)">Los Angeles(USA)</li>
+								<li class="city cityList" id="london" onClick="loadCity(this)">London (England)</li>
+								<li class="city cityList" id="paris" onClick="loadCity(this)">Paris (France)</li>
+								<li class="city cityList" id="shanghai" onClick="loadCity(this)">Shanghai(China)</li>
+								<li class="city cityList" id="tokyo" onClick="loadCity(this)">Tokyo(Japan)</li>
+								<li class="city cityList" id="bucharest" onClick="loadCity(this)">Bucharest(Romania)</li>
+							</ul>
+							<h4>More cities will be added soon</h4>
+						</div>	
+					</div>
+				</div>	
 			</div>
 		</div>
 	</main>
